# SoundCloud-Backend

./: .env.example  .gitignore  README.md  docker-compose-dev.yml
api/: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile
api/docs/: sc-networking.md
api/migrations/: 0000_initial.sql  0001_login_request_step.sql  0002_enrich_schema.sql  0003_enrich_calibration.sql  0004_user_auras.sql  0005_recommendations_v2.sql  0006_discover.sql  0007_discover_search.sql  0008_discover_partials.sql  0009_discover_real_tracks.sql  0010_discover_spotlight.sql  0011_sync_queue.sql  0012_cold_cache.sql  0013_mirror_sort_stable.sql  0014_login_request_retry.sql  0015_drop_user_taste.sql  0016_tracks_rework.sql  0017_playlist_counters.sql  0018_track_covers.sql  0019_drop_owned_payload.sql  0020_drop_seeded_like_events.sql  0021_widen_country_columns.sql  0022_search_indexes.sql  0023_widen_cdn_tracks_quality.sql  0024_search_lower_title_trgm.sql  0025_tracks_transcribe_state.sql  0026_enrich_priority_idx.sql  0027_user_events_created_at_idx.sql  0028_read_path_indexes.sql  0029_lyrics_fts.sql  0030_discover_artist_popularity.sql  0031_work_scheduler_enrich.sql  0032_artists_crawl_freshness.sql  0033_wanted_tracks_backoff.sql  0034_albums_genius_album_id_idx.sql  0035_artist_has_sc_account.sql  0036_drop_superseded_enrich_indexes.sql  0037_user_profiles.sql  0038_login_request_profile_ok.sql  0039_track_artist_blocks.sql  (+14 more)
api/queries/admin/auth_overview/: oauth_health.sql  overview.sql
api/queries/admin/catalog/: album_exists.sql  album_tracks_delete_by_track.sql  album_tracks_insert.sql  albums_search.sql  artist_album_count.sql  artist_exists.sql  artist_get.sql  artist_name_exists.sql  artist_sc_accounts.sql  artist_track_count.sql  artist_tracks.sql  artist_update.sql  artists_search.sql  block_delete_pair.sql  sc_account_detach_clear_primary.sql  sc_account_detach_count.sql  sc_account_detach_delete_credits.sql  sc_account_tracks.sql  track_artists_delete_credit.sql  track_artists_delete_other_primary.sql  track_artists_delete_pair.sql  track_artists_delete_primary.sql  track_artists_insert_primary.sql  track_artists_upsert_credit.sql  track_blocks.sql  track_clear_primary_if_match.sql  track_credits.sql  track_exists.sql  track_get.sql  track_primary_names.sql  track_set_album.sql  track_set_primary_artist_id.sql  tracks_search.sql
api/queries/admin/maintenance/: album_set_title_norm.sql  albums_title_scan.sql  artist_fill_external_ids.sql  artist_mark_merged.sql  artist_mark_merged_clear_ids.sql  artist_normalized_holder.sql  artist_set_name.sql  artist_set_normalized.sql  artists_mb_scan.sql  artists_scan.sql  merge_repoint_album_artists.sql  merge_repoint_album_artists_dedup.sql  merge_repoint_albums_primary.sql  merge_repoint_track_artists.sql  merge_repoint_track_artists_dedup.sql  merge_repoint_tracks_cover.sql  merge_repoint_tracks_primary.sql  merged_artists_scan.sql  playlist_set_title_norm.sql  playlists_title_scan.sql  role_feature_dedup.sql  role_feature_update.sql  track_set_meta.sql  track_set_title_norm.sql  tracks_meta_escaped_scan.sql  tracks_title_scan.sql
api/queries/admin/stats/: sessions.sql
api/queries/admin/sync_queue/: flush.sql  purge.sql  recent_errors.sql  stats_by_action.sql  (+1 more)
api/queries/playlists/: all_track_ids.sql  assert_owner.sql  bump_desired_rev.sql  desired_rev_by_urn.sql  find_by_urn.sql  has_pending_intent.sql  insert_tracks.sql  lock_tracks.sql  mark_synced_if_unchanged.sql  page_track_ids.sql  pending_owned_urns.sql  set_track_count.sql  touch_last_read.sql
api/queries/tracks/: apply_resolved_duration.sql  clear_duration_resolve.sql  find_fingerprint_neighbour.sql  find_id_canonical_by_sc.sql  link_canonical.sql  mark_indexed.sql  mark_storage_done.sql  mark_storage_rejected.sql  mark_too_long.sql  pick_duration_resolve.sql  set_fingerprint.sql
api/sc_methods/: apiv2_get.lua  playlist_full.lua  resolve_track.lua  search.lua  track_by_id.lua  user_by_id.lua  user_collection.lua
api/scripts/: backfill-is-cover.sql  backfill-lyrics-fts.sql
api/src/: config.rs  error.rs  main.rs  router.rs  state.rs  telemetry.rs
api/src/bus/: mod.rs  nats.rs  subjects.rs
api/src/cache/: cache_service.rs  list_cache_service.rs  mod.rs  sc_pagination.rs
api/src/common/: admin.rs  cache_helper.rs  external_fetch.rs  http_metrics.rs  mod.rs  pagination.rs  premium_gate.rs  query.rs  release_date.rs  response.rs  sc_ids.rs  sc_payload.rs  session.rs  throttle.rs  uuid.rs
api/src/db/: advisory_locks.rs  mod.rs
api/src/modules/: mod.rs
api/src/qdrant/: mod.rs
api/src/redis/: mod.rs
api/src/sc/: apiv2.rs  client.rs  errors.rs  health.rs  lua_methods.rs  mapping.rs  mod.rs  read.rs  types.rs
gateway/: Cargo.toml  Dockerfile  README.md
gateway/src/: config.rs  listen.rs  main.rs  proxy.rs  routes.rs
storage/: .env.example  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  docker-compose.yml
storage/src/: bus.rs  config.rs  main.rs  pipeline.rs  transcode.rs
storage/src/backend/: gdrive.rs  local.rs  mod.rs  s3.rs
storage/src/routes/: files.rs  health.rs  mod.rs  upload.rs
storage/tools/: get-refresh-token.sh
storage/tools/s3-user-cli/: .env.example  README.md  s3-user.sh
streaming/: .env.example  Cargo.toml  Dockerfile
streaming/sc_methods/: get_track.lua  hls_decrypt.lua  hls_download.lua  progressive_download.lua  transcoding_resolve.lua
streaming/src/: config.rs  error.rs  main.rs  sc_methods.rs
streaming/src/cleanup/: hq_upgrade.rs  mod.rs  task.rs
streaming/src/db/: postgres.rs
streaming/src/stream/: anon.rs  cookies.rs  cookies_pool.rs  decrypt_fetch.rs  download.rs  handler.rs  hls.rs  internal.rs  mod.rs  oauth.rs  proxy.rs  restricted.rs  storage.rs  validate.rs
utils/tls-common/: Cargo.toml
utils/tls-common/src/: acceptor.rs  acme.rs  config.rs  lib.rs  proxy.rs  redirect.rs  serve.rs  shutdown.rs
(+571 files in other folders)
