[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-full", "timeout"] }

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"

reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "stream",
    "gzip",
    "brotli",
] }

sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "chrono",
    "uuid",
    "json",
    "migrate",
] }

deadpool-redis = "0.18"
redis = { version = "0.27", default-features = false, features = ["tokio-comp"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"

thiserror = "2"
anyhow = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

chrono = { version = "0.4", default-features = false, features = [
    "std",
    "clock",
    "serde",
] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
bytes = "1"

sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
hex = "0.4"
subtle = "2"

mini-moka = "0.10"

backon = "1"

tikv-jemallocator = "0.6"

tls-common = { path = "../utils/tls-common" }
call-relay = { path = "../utils/call/relay" }
call-lua-macros = { path = "../utils/call/lua-macros" }

async-nats = "0.49"
qdrant-client = "1"
scraper = "0.20"
regex = "1"
whatlang = "0.16"
unicode-normalization = "0.1"

urlencoding = "2"
once_cell = "1"
url = "2"
rand_distr = "0.4"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
