[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"
futures = "0.3"
aws-config = { version = "1", default-features = false, features = ["behavior-version-latest", "rt-tokio", "credentials-process"] }
aws-sdk-s3 = { version = "1", default-features = false, features = ["behavior-version-latest", "rt-tokio", "default-https-client"] }
aws-credential-types = "1"
aws-smithy-types = { version = "1", features = ["rt-tokio"] }
async-nats = "0.49"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "multipart"] }
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }
url = "2"
subtle = "2"
tls-common = { path = "../utils/tls-common" }

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
opt-level = "s"
