[package]
name = "tls-common"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "net", "sync", "signal", "io-util"] }
tracing = "0.1"
rustls = { version = "0.23", features = ["ring"] }
rustls-acme = { version = "0.14", features = ["axum"] }
# rcgen 0.13.2 (transitively via rustls-acme) не компилируется с time 0.3.48+
# (E0119: конфликт impl From<HourBase>). Фикс есть в rcgen 0.14, но
# rustls-acme 0.14 его ещё не пускает. Cargo.lock здесь в .gitignore, поэтому CI
# каждый раз резолвит заново и без этого пина тянет сломанный 0.3.48. Пинуем на
# последнюю рабочую 0.3.x. Снять, когда rustls-acme перейдёт на rcgen 0.14+.
time = "=0.3.47"
axum-server = "0.7"
tokio-stream = "0.1"
tower = "0.5"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
opt-level = "s"